added circles (playing with paper.js)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <script type="text/javascript" src="paper-full.js"></script>
     <!-- Define inlined PaperScript associate it with myCanvas -->
     <script type="text/paperscript" canvas="myCanvas">
-        
+        var circle = new Path.Circle(new Point(0, 0), 10);
+        circle.fillColor = "purple";
+        for (var i = 0; i < 10; i++) {
+            for (var j = 0; j < 10; j ++) {
+                var copy = circle.clone();
+                copy.position = new Point(i * 100, j * 100);
+            }
+        }
     </script>
 </head>
 
