--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
     <script type="text/javascript" src="paper-full.js"></script>
     <!-- Define inlined PaperScript associate it with myCanvas -->
     <script type="text/paperscript" canvas="myCanvas">
-        var circle = new Path.Circle(new Point(0, 0), 10);
-        circle.fillColor = "purple";
-        for (var i = 0; i < 10; i++) {
-            for (var j = 0; j < 10; j ++) {
-                var copy = circle.clone();
-                copy.position = new Point(i * 100, j * 100);
+        var circles = [];
+        function onKeyDown(event) {
+            // When a key is pressed, set the content of the text item:
+            var circle = new Path.Circle(new Point(view.size.width, view.size.height) * Point.random(), new Size(500) * Size.random());
+            circle.fillColor = "red";
+            circles.push(circle);
+        }
+        function onFrame(event) {
+            for(var i = 0; i < circles.length; i++) {
+                // Each frame, change the fill color of the path slightly by
+                // adding 1 to its hue:
+                circles[i].fillColor.hue += 1;
+                // scale down
+                circles[i].scale(0.9);
             }
         }
     </script>
