--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
                 circles[i].fillColor.hue += 1;
                 // scale down
                 circles[i].scale(0.9);
+                if(circles[i].area < 1){
+                    circles[i].remove(); // remove the circle from the canvas
+                    circles.splice(i, 1); // remove the circle from the array
+                    i--; // decrement i so that the loop doesn't skip a circle because of .splice()
+                }
             }
         }
     </script>
